--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 ---
-<div class="jumbotron" style="padding: 20rem 5rem; background-image: url({{ page.image }}); background-size: cover;">
-  <h1 class="col-md-5 mx-auto mb-5 d-flex justify-content-center text-light">{{ page.title }}</h1>
-  <p class="lead text-light">{{ page.description }}</p>
+<div >
+  <img src="{{ page.image }}" style="width: 100%" />
+  <h1 class="col-md-5 mx-auto mb-5 d-flex justify-content-center text-light" style="position: absolute; top: 50%;left: calc(50% - 330px);">{{ page.title }}</h1>
 </div>
 <article class="container">
   {{ content }}
