--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,7 @@
     <div class="col-md-11 media-body">
       <h1 class="text-left blog-footer-title">Hi, I'm Sky<br/>(Nomad Coder)!</h1>
       <p class="text-left mt-2">디지털 노마드를 꿈꾸는 프론트엔드 개발자입니다.</p>
+      <p class="text-left mt-2">Github: https://github.com/SkynI25 <a href="https://github.com/SkynI25">(Link)</a></p>
     </div>
   </div>
 </div>
