빙그레 서체 적용 및 제목 위치 조정

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 ---
-<div>
+<div style="position: relative;">
   <img src="{{ page.image }}" style="width: 100%" />
-  <h1 class="col-md-5 mx-auto mb-5 d-flex justify-content-center text-light" style="position: absolute; top: 50%;left: calc(50% - 330px);">{{ page.title }}</h1>
+  <h1 class="col-md-5 mx-auto mb-5 d-flex justify-content-center text-light" style="position: absolute; top: 20%;left: 25%;">{{ page.title }}</h1>
 </div>
 <article class="container">
   {{ content }}
