--- a/assets/index.css
+++ b/assets/index.css
@@ -1,12 +1,27 @@
 /* stylelint-disable selector-list-comma-newline-after */
 
+@font-face {
+  font-family: 'BinggraeSamanco-Bold';
+  src: url('../assets/fonts/BinggraeSamanco-Bold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Binggrae';
+  src: url('../assets/fonts/Binggrae.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Binggrae-Bold';
+  src: url('../assets/fonts/Binggrae-Bold.ttf') format('truetype');
+}
+
 .blog-header {
   line-height: 1;
   border-bottom: 1px solid #e5e5e5;
 }
 
 .blog-header-logo {
-  font-family: "Playfair Display", Georgia, "Times New Roman", serif;
+  font-family: "BinggraeSamanco-Bold", "Playfair Display", Georgia, "Times New Roman", serif;
   font-size: 2.25rem;
 }
 
@@ -15,7 +30,11 @@
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Playfair Display", Georgia, "Times New Roman", serif;
+  font-family: "Binggrae-Bold", "Playfair Display", Georgia, "Times New Roman", serif;
+}
+
+p {
+  font-family: "Binggrae", "Playfair Display", Georgia, "Times New Roman", serif;
 }
 
 h3 {
